fix misalignment in stars from bulma rule in css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,6 +46,14 @@ i {
   list-style-type: none;
 }
 
+.rating li + li {
+  margin-top: 0;
+}
+
+/* .content li+li {
+  margin-top: .25em;
+} */
+
 .rating-item {
   border: 1px solid #fff;
   cursor: pointer;
